<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Studiportal</string>
    <string name="leo" translatable="false">Leonard Lemke</string>
    <string name="leo_job" translatable="false">Study Plus Mathem.-Tech. Softwaredeveloper</string>
    <string name="email" translatable="false">studiportal@leonard-lemke.com</string>
    <string name="my_website" translatable="false">https://www.leonard-lemke.com</string>
    <string name="my_insta" translatable="false">https://www.instagram.com/lemkinator5/</string>
    <string name="my_github" translatable="false">https://github.com/Lemkinator</string>
    <string name="studiportal_github" translatable="false">https://github.com/Lemkinator/Studiportal</string>
    <string name="github" translatable="false">Github</string>
    <string name="privacy_website" translatable="false">https://www.leonard-lemke.com/apps/studiportal/privacy-policy</string>
    <string name="playstore" translatable="false">Play Store</string>
    <string name="playstore_developer_page_link" translatable="false">https://play.google.com/store/apps/dev?id=4759149701353957861</string>
    <string name="playstore_app_link" translatable="false">market://details?id=</string>
    <string name="playstore_link" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="oneui_library_github" translatable="false">OneUI-Project Github</string>
    <string name="oneui_github_link" translatable="false">https://github.com/OneUIProject</string>
    <string name="rick_roll_troll_link" translatable="false">https://www.leonard-lemke.com/rr</string>
    <string name="hfu_imz_url" translatable="false">https://www.hs-furtwangen.de/einrichtungen/informations-und-medienzentrum</string>
    <string name="url_login" translatable="false">https://studi-portal.hs-furtwangen.de/qisserver/rds?state=user&amp;type=1&amp;category=auth.login&amp;startpage=portal.vm&amp;breadCrumbSource=portal</string>
    <string name="url_logout" translatable="false">https://studi-portal.hs-furtwangen.de/qisserver/rds?state=user&amp;type=4&amp;re=last&amp;category=auth.logout&amp;breadCrumbSource=portal</string>
    <string name="url_fetch_asi" translatable="false">https://studi-portal.hs-furtwangen.de/qisserver/rds?state=change&amp;type=1&amp;moduleParameter=studyPOSMenu&amp;nextdir=change&amp;next=menu.vm&amp;subdir=applications&amp;xml=menu&amp;purge=y&amp;navigationPosition=functions%2CstudyPOSMenu&amp;breadcrumb=studyPOSMenu&amp;topitem=functions&amp;subitem=studyPOSMenu</string>
    <string name="url_observe" translatable="false">https://studi-portal.hs-furtwangen.de/qisserver/rds?state=htmlbesch&amp;moduleParameter=Student&amp;menuid=notenspiegel&amp;breadcrumb=notenspiegel&amp;breadCrumbSource=menu&amp;asi=%1$s</string>
    <string name="studiportal_url" translatable="false">https://studi-portal.hs-furtwangen.de/</string>
    <string name="exam_notification_channel_id" translatable="false">Exam_Notification_Channel</string>
    <string name="exam_notification_channel_name">Changes in Studiportal</string>
    <string name="exam_notification_channel_description">Receive a notification when changes occur in Studiportal.</string>
    <string name="notification">Notification</string>
    <string name="notify_about_change_title">Receive a notification when changes occur</string>
    <string name="notify_about_change_summary">A notification is displayed when changes occur in Studiportal.</string>
    <string name="show_grade_title">Show grade in notification</string>
    <string name="show_grade_summary">New grades are displayed in the notification.</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="contact_me">Contact me (e-mail)</string>
    <string name="help_text">This app is in no way affiliated with Furtwangen University and is only used to display the data from the Studiportal. \nThe logo is used with the kind permission of the Strategy and Communication Department of Furtwangen University.</string>
    <string name="studiportal_rip">RIP Studiportal App?</string>
    <string name="studiportal_rip_text">The Studiportal app is not available for an indefinite period of time.</string>
    <string name="what_happened">What happened?</string>
    <string name="studiportal_offline_date">September 2023</string>
    <string name="studiportal_offline">Studiportal is taken offline…</string>
    <string name="studiportal_online_date">February 2024</string>
    <string name="studiportal_online">Studiportal is online again!</string>
    <string name="studiportal_sso">Studiportal uses Single Sign-on for login</string>
    <string name="studiportal_sso_text">Due to the Single Sign-on, the login process of the app is significantly more difficult. Unfortunately, the HFU Informations- und Medienzentrum (HFU IMZ) still does not offer an API (interface) for retrieving the data from the Studiportal. As long as this remains the case and no solution can be found for the newly added Single Sign-on, the Studiportal app is not available.</string>
    <string name="hfu_imz" translatable="false">Informations- und Medienzentrum</string>
    <string name="contribute_on_github">Contribute on Github</string>
    <string name="about_page_optional_text">The new Studiportal app with OneUI-Design</string>
    <string name="about_app">About Studiportal</string>
    <string name="open_in_playstore">Open in Play Store</string>
    <string name="about_me">About me</string>
    <string name="write_email">Write an e-mail</string>
    <string name="tiktok" translatable="false">TikTok</string>
    <string name="website">Website</string>
    <string name="support_me_text">If you want to support me in any way, feel free to send me an e-mail</string>
    <string name="support_me">Support me</string>
    <string name="rate_app">Rate app in Play Store</string>
    <string name="write_review">Write a review</string>
    <string name="share">Share</string>
    <string name="share_app">Share this app</string>
    <string name="useful_links">Useful links</string>
    <string name="design">Design</string>
    <string name="system_default">System default</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="change_language">Change app language</string>
    <string name="change_language_not_supported_by_device">Change language is not supported by your device.</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <string name="delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you really want to log out?</string>
    <string name="login_data">Login data</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_on_metered_network">Refresh on metered Networks</string>
    <string name="refresh_on_metered_network_summary">In the network settings of the device, Wifi networks can also be marked as metered.</string>
    <string name="never">Never</string>
    <string-array name="array_refresh_interval">
        <item>No refresh</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>12 Hour</item>
        <item>1 Day</item>
    </string-array>
    <string-array name="array_refresh_interval_key">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string name="dev_options">Developer options</string>
    <string name="more_information">More Information</string>
    <string name="privacy_information">Privacy information</string>
    <string name="report_bug">Report bug or improvement</string>
    <string name="oobe_onboard_msg1_title">Disclaimer</string>
    <string name="oobe_onboard_msg2_title">Beautiful design</string>
    <string name="oobe_onboard_msg3_title">Free, no ads</string>
    <string name="oobe_onboard_msg1_summary">This app is in no way affiliated with Furtwangen University. More information can be found under the menu item \"Help\".</string>
    <string name="oobe_onboard_msg2_summary">The new Studiportal app with OneUI-Design.</string>
    <string name="oobe_onboard_msg3_summary">No annoying ads, no subscriptions, no costs at all.</string>
    <string name="tos">Terms of Service</string>
    <string name="tos_content">It is not permitted to use this app contrary to morality or the laws in force. \n\nYou also agree that you will not use this app for any purposes prohibited by United States law, including, without limitation, the development, design, manufacture, or production of missile, chemical or biological weapons. \nHowever, this restriction will not apply in the event of the occurrence (certified by the United States Centers for Disease Control or successor body) of a widespread viral infection transmitted via bites or contact with bodily fluids that causes human corpses to reanimate and seek to consume living human flesh, blood, brain or nerve tissue and is likely to result in the fall of organized civilization. \n\nA special consideration, which may include monetary compensation, will be provided to a limited number of users who read this section of the Terms and Services and contact me at writing-an-email-to-this-address-will-cost-you-10-euro@leonard-lemke.com. This offer may be withdrawn at any time without any notice. \n\nAdditional questions will be answered at this-email-is-way-too-long-and-hopefully-you-cannot-copy-paste@leonard-lemke.com.</string>
    <string name="oobe_tos_text">By continuing, you agree to the %1$s.</string>
    <string name="continue_button_text">Continue</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="no_email_app_installed">No e-mail app installed…</string>
    <string name="no_browser_app_installed">No browser app installed…</string>
    <string name="error">Error</string>
    <string name="no_entry">No entry</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sesl_cancel">Cancel</string>
    <string name="sesl_navigate_up">Back</string>
    <string name="exam_number">Exam no.</string>
    <string name="exam_number_value">Exam no.: %1$s</string>
    <string name="name">Name</string>
    <string name="name_value">Name: %1$s</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_value">Bonus: %1$s ECTS</string>
    <string name="malus">Malus</string>
    <string name="malus_value">Malus: %1$s ECTS</string>
    <string name="ects">ECTS</string>
    <string name="ects_value">&#x00A0;(%1$s ECTS)</string>
    <string name="no_ects">No ECTS</string>
    <string name="sws">SWS</string>
    <string name="sws_value">&#x00A0;(%1$s SWS)</string>
    <string name="no_sws">No SWS</string>
    <string name="semester">Semester</string>
    <string name="semester_value">Semester: %1$s</string>
    <string name="kind">Kind</string>
    <string name="kind_value">Kind: %1$s</string>
    <string name="attempt">Attempt</string>
    <string name="attempt_value">Attempt: %1$s</string>
    <string name="grade">Grade</string>
    <string name="grade_value">Grade: %1$s</string>
    <string name="state">State</string>
    <string name="state_value">State: %1$s</string>
    <string name="refresh_now">Refresh now</string>
    <string name="open_online">Open Studiportal online</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="demo_username_label">Username for demo: \"DEMO\"</string>
</resources>