<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/design">
        <dev.oneuiproject.oneui.preference.HorizontalRadioPreference
            android:key="dark_mode_pref"
            app:entries="@array/preferences_darkmode_entries"
            app:entriesImage="@array/preferences_darkmode_entries_image"
            app:entryValues="@array/preferences_darkmode_values"
            app:viewType="image" />
        <SwitchPreferenceCompat
            android:key="dark_mode_auto_pref"
            android:title="@string/system_default" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <SwitchPreferenceCompat
            android:key="confirm_exit_pref"
            android:summary="@string/press_again_to_exit"
            android:title="@string/confirm_exit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/login_data">

        <PreferenceScreen
            android:key="logout_pref"
            android:title="@string/logout" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification">

        <SwitchPreferenceCompat
            android:key="notify_about_change_pref"
            android:title="@string/notify_about_change_title"
            android:summary="@string/notify_about_change_summary"/>

        <SwitchPreferenceCompat
            android:key="show_grade_in_notification_pref"
            android:title="@string/show_grade_title"
            android:summary="@string/show_grade_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/refresh">

        <DropDownPreference
            android:key="refresh_interval_pref"
            android:title="@string/refresh_interval"
            android:defaultValue="60"
            android:entryValues="@array/array_refresh_interval_key"
            android:entries="@array/array_refresh_interval"/>

        <SwitchPreferenceCompat
            android:key="use_metered_network_pref"
            android:title="@string/refresh_on_metered_network"
            android:summary="@string/refresh_on_metered_network_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev_options"
        android:title="@string/dev_options">
        <PreferenceScreen
            android:key="delete_app_data_pref"
            android:title="@string/delete_appdata_and_exit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more_information">
        <PreferenceScreen
            android:key="tos_pref"
            android:title="@string/tos" />

        <PreferenceScreen
            android:key="privacy_pref"
            android:title="@string/privacy_information" />

        <PreferenceScreen
            android:key="report_bug_pref"
            android:title="@string/report_bug" />

        <PreferenceScreen
            android:key="about_app_pref"
            android:title="@string/about_app">
            <intent
                android:targetClass="de.lemke.studiportal.ui.AboutActivity"
                android:targetPackage="de.lemke.studiportal" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>