<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/menu_item_search"
            android:icon="@drawable/ic_oui_search"
            app:showAsAction="always"
            android:title="@string/search"
            tools:ignore="AlwaysShowAction,AppCompatResource" />

        <item
            android:id="@+id/menu_item_open_online"
            android:icon="@drawable/ic_oui_internet_website"
            app:showAsAction="never"
            android:title="@string/open_online"
            tools:ignore="AppCompatResource" />

        <item
            android:id="@+id/menu_item_refresh_now"
            android:icon="@drawable/ic_oui_refresh"
            app:showAsAction="never"
            android:title="@string/refresh_now"
            tools:ignore="AppCompatResource" />

</menu>