<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="true"
    app:title="@string/studiportal_rip">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_rip_text"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/openOnlineButton"
                style="@style/ButtonStyle.Colored"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="7dp"
                android:drawableStart="@drawable/ic_oui_internet_website"
                android:text="@string/open_online" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/what_happened"
                android:textColor="@color/primary_text_icon_color_themed"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_offline_date"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_offline"
                android:textSize="17sp" />

            <dev.oneuiproject.oneui.widget.RoundFrameLayout
                android:layout_width="250dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp">

                <VideoView
                    android:id="@+id/videoViewOffline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </dev.oneuiproject.oneui.widget.RoundFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_online_date"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_online"
                android:textSize="17sp" />

            <dev.oneuiproject.oneui.widget.RoundFrameLayout
                android:layout_width="250dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp">

                <VideoView
                    android:id="@+id/videoViewOnline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </dev.oneuiproject.oneui.widget.RoundFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_sso"
                android:textSize="17sp" />

            <dev.oneuiproject.oneui.widget.RoundFrameLayout
                android:layout_width="250dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="5dp">

                <VideoView
                    android:id="@+id/videoViewSSO"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </dev.oneuiproject.oneui.widget.RoundFrameLayout>

            <dev.oneuiproject.oneui.widget.RoundFrameLayout
                android:layout_width="250dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp">

                <VideoView
                    android:id="@+id/videoViewBeg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </dev.oneuiproject.oneui.widget.RoundFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/studiportal_sso_text"
                android:textSize="17sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imzButton"
                style="@style/ButtonStyle.Transparent"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="7dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/ic_oui_internet_website"
                android:text="@string/hfu_imz" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/contactMeButton"
                style="@style/ButtonStyle.Transparent"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="7dp"
                android:drawableStart="@drawable/ic_oui_email_outline"
                android:text="@string/contact_me" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/contributeOnGithubButton"
                style="@style/ButtonStyle.Transparent"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="7dp"
                android:drawableStart="@drawable/about_page_github"
                android:text="@string/contribute_on_github" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>


