<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="true"
    app:title="@string/app_name"
    tools:context=".ui.NotificationIntroActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/notification_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_location="main_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:checked="true"
                android:text="@string/notify_about_change_title"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/notify_about_change_summary"
                android:textColor="@color/secondary_text_icon_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_show_grade_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:checked="true"
                android:text="@string/show_grade_title"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/notification_show_grade_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_grade_summary"
                android:textColor="@color/secondary_text_icon_color"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/notification_footer_container"
        android:layout_width="match_parent"
        android:layout_height="44.0dp"
        android:layout_margin="24.0dp"
        android:orientation="vertical"
        app:layout_location="footer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/notification_footer_button"
            style="@style/OOBE.Button"
            android:layout_width="296.0dp"
            android:layout_height="44.0dp"
            android:layout_gravity="center"
            android:text="@string/continue_button_text" />

        <androidx.appcompat.widget.SeslProgressBar
            android:id="@+id/notification_footer_button_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="32.0dp"
            android:layout_height="32.0dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</dev.oneuiproject.oneui.layout.ToolbarLayout>