<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="true"
    app:title="@string/app_name"
    tools:context=".ui.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_location="main_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/demo_username_label"
                android:textColor="@color/secondary_text_icon_color"
                android:textSize="11sp" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:autofillHints="username"
                android:focusable="true"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/login_footer_container"
        android:layout_width="match_parent"
        android:layout_height="44.0dp"
        android:layout_margin="24.0dp"
        android:orientation="vertical"
        app:layout_location="footer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_footer_button"
            style="@style/OOBE.Button"
            android:layout_width="296.0dp"
            android:layout_height="44.0dp"
            android:layout_gravity="center"
            android:text="@string/login" />

        <androidx.appcompat.widget.SeslProgressBar
            android:id="@+id/login_footer_button_progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="32.0dp"
            android:layout_height="32.0dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</dev.oneuiproject.oneui.layout.ToolbarLayout>